2006-10-05  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm ("Regular expressions"): Tests for regex module

	* lib/regex.c (dfsch_regex_substrings): Fixed buffer overflow

	* src/repl.c (main): integrated regular expressions

	* lib/regex.c (dfsch_regex_substrings): substring matches

2006-10-04  Ales Hakl  <ales at hakl dot net>

	* lib/threads.c (dfsch_threads_register): Fixed prototypes of 
	finalizers

	* lib/regex.c (dfsch_regex_register): Simple (match/no match) regular 
	expression support... and now with code :)
	(regex_finalizer): finalization of regex objects

	* scm/supermarket.scm: Exit after predefined number of iterations, 
	do not loop forever

2006-09-20  Ales Hakl  <ales at hakl dot net>

	* configure.ac (USE_READLINE): Removed redundant chcek for use_readline

	* TODO: Reordered to match priority

	* lib/: Moved standalone libraries to separate directory. 

2006-08-13  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm: Some more tests

2006-08-12  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_eqv_p): Handle the NULL case.

2006-08-06  Ales Hakl  <ales at hakl dot net>

	* src/native_cxr.c: nested accessors for pairs

2006-07-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_apply_tr): Optimize tail calls even thru
	custom applicable types
	(dfsch_call_ec): continuations as distinct type
	(continuation_apply): check for continuations passed between threads
	(dfsch_evla_tr): clear break_type after handling it.

	* src/wrapper.c (dfsch_make_wrapper_type): Wraper object for
	building custom data types from scheme code

	* src/dfsch.c (dfsch_apply_tr): reordered checks - primitives are
	provably called more often than closures

	* dfsch/dfsch.h (dfsch_type_t): apply method for user-defined
	applicable objects

2006-07-16  Ales Hakl  <ales at hakl dot net>

	* src/hash.c (dfsch_hash_2_alist): alist->hash

2006-07-15  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_exception_write): Better stacktraces