@@ -1,5 +1,7 @@
 2006-10-05  Ales Hakl  <ales at hakl dot net>
 
+	* lib/regex.c: split core from code handling wrapper objects.
+
 	* scm/test.scm ("Regular expressions"): Tests for regex module
 
 	* lib/regex.c (dfsch_regex_substrings): Fixed buffer overflow
